<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardCornerRadius="4dp"
    app:cardBackgroundColor="#EAEAEA"
    android:layout_margin="8dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scaleType="fitCenter"
            />
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Title"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            android:textColor="#111111"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/tags"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="cats dogs"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="4dp"
            android:textSize="12sp"
            android:textColor="#111111"
            />
        <TextView
            android:id="@+id/author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Author"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="4dp"
            android:textSize="14sp"
            android:textColor="#111111"
            />
        <TextView
            android:id="@+id/publishedDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="27 Jan 2018 10:43"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="4dp"
            />
        <TextView
            android:id="@+id/takenDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="27 Jan 2018 10:43"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="4dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/browse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="BROWSE"
                android:clickable="true"
                android:focusable="true"
                android:background="?android:selectableItemBackground"
                android:padding="16dp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SAVE"
                android:clickable="true"
                android:focusable="true"
                android:background="?android:selectableItemBackground"
                android:padding="16dp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SHARE"
                android:clickable="true"
                android:focusable="true"
                android:background="?android:selectableItemBackground"
                android:padding="16dp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>